Fix T73580: Gpencil crash when try to draw without eraser brush available